--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "^4.16.3",
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
-    "lru-cache": "^4.1.3"
+    "lru-cache": "^4.1.3",
+    "nodemon": "^1.18.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -20,7 +21,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node lib/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2",
     "build": "babel lib -d dist",
     "serve": "node dist/index.js"
   },
