--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "lru-cache": "^4.1.3",
-    "nodemon": "^1.18.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -21,7 +20,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2",
+    "start": "babel lib -d dist && node dist/index.js",
+    "start-dev": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2",
     "build": "babel lib -d dist",
     "serve": "node dist/index.js"
   },
