--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.16.3",
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
-    "lru-cache": "^4.1.3",
+    "lru-cache": "^4.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -20,12 +20,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "babel lib -d dist && node dist/index.js",
-    "start-dev": "nodemon lib/index.js --exec babel-node --presets es2015,stage-2",
-    "build": "babel lib -d dist",
-    "serve": "node dist/index.js"
+    "start": "nodemon index.js --exec babel-node --presets es2015,stage-2",
   },
-  "author": "",
+  "author": "Yiren Wang",
   "license": "ISC",
   "description": ""
 }
