--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node --presets es2015,stage-2",
+    "start": "nodemon index.js --exec babel-node --presets es2015,stage-2"
   },
   "author": "Yiren Wang",
   "license": "ISC",
