--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.11.6",
+    "dotenv": "^6.0.0",
     "nodemon": "^1.18.3",
     "prettier": "^1.13.7",
     "prettier-eslint": "^8.8.2"
