--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.11.6",
     "dotenv": "^6.0.0",
