--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "http-status": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
     "lru-cache": "^4.1.3"
   },
   "devDependencies": {
