chore(docker): Rework Dockerfile and docker-compose.yml

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:alpine
 
-WORKDIR /usr/app
+WORKDIR /usr/src/app
 
-RUN yarn install --quiet
+COPY package.json ./
+COPY yarn.lock ./
+
+RUN yarn install
+
+COPY . .
