--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       dockerfile: docker/Dockerfile
     command: yarn start
     ports:
-      - 3001:3001  enedis-db:
+      - 3001:3001
+  enedis-db:
     image: postgres:alpine
     environment:
     - DB_USER=admin
