--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,9 +7,11 @@ services:
     command: yarn start
     ports:
       - 3001:3001
+    environment:
+      - DATABASE_URL=postgres://enedis:password@enedis-db:5432/test
   enedis-db:
     image: postgres:alpine
     environment:
-    - DB_USER=admin
-    - DB_PASS=password
-    - DB_NAME=test
+      - POSTGRES_USER=enedis
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=test
