--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "express-jwt": "^5.3.1",
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
-    "lru-cache": "^4.1.3"
+    "lru-cache": "^4.1.3",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
