--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "lru-cache": "^4.1.3",
