--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "http-status": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
     "lru-cache": "^4.1.3",
+    "memorystore": "^1.6.0",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0"
